--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "dns": "^0.2.2",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
